# sdl-c-playground

./: CMakeLists.txt
src/: main.c
